# digital-signal-processing

./: README.md  exam1.ipynb  pyproject.toml
09_butterworth_filter/: 09_butterworth_filter.ipynb
10_butterworth_filter/: 10_butterworth_filter.ipynb  Lab10_butterworth_filter.ipynb
11_filter_python_libs/: 11_filter_python_libs.ipynb
12_conv_algoritm/: 12_conv_algoritm.ipynb  sinal.npy
13_windowed_sinc/: 13_windowed_sinc.ipynb
14_fir_filters/: 14_fir_filters.ipynb  4.edf  Lab14_FelipeBrito_colab.ipynb
approximate_transform/: approximate_transform.ipynb
digital_filter/: digital_filter.ipynb
discrete_systems/: discrete_systems.ipynb
exam_2/: exam_2.ipynb
fast_fourier_transform/: fast_fourier_transform.ipynb
fast_fourier_transform/signals/: sinalContaminado.npy
fourier_transform/: fourier_transform.ipynb
fourier_transform/signals/: DTMF-s6.npy
fourier_transform/utils/: espectro.py
frequency_responses/: frequency_responses.ipynb
