[tool.poetry]
name = "digital-signal-processing"
version = "0.1.0"
description = "Digital Signal Processing"
authors = ["brito1212 <felipef_brito@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matlab = "^0.1"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
sympy = "^1.13.2"

[tool.poetry.group.dev.dependencies]
matlab = "^0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
